--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <section class="sections" id="ftpage">
         <div class="img">
-        <img src="css/imagens/eu.jfif">
+        <img src="CSS/imagens/eu.jfif">
         <div class="text">
           <h2>Quem sou eu?</h2>  
             <p>- Me chamo Pedro Davi Monteiro, mas quem me conhece dos jogos me chama de Thosaka ou Dark, tenho 18 anos e nasci em Parnamirim/RN, que é a mesma cidade que moro ate hoje. Sou apaixonado por jogos eletronicos, escutar musica, ver animes, series, filmes, ler livros sobre mitologia grega, gosto de desenhar e amo cuidar de plantas (principalmente cactos e suculentas).</p>
