--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               <li><a>- Meu signo é Libra</a></li>
               <li><a>- Amo praticar esportes;</a></li>
               <li><a>- Coleciono latinhas de monster;</a></li>
-              <li><a>- Gosto de desenhar nos meu horários vagos;</a></li>
+              <li><a>- Gosto de desenhar nos meus horários vagos;</a></li>
               <li><a>- Faço literalmente tudo ouvindo musica;</a></li>
               <li><a>- Nos jogos me chamam de Thosaka ou Dark;</a></li>
               <li><a>- Amo café.</a></li>
